--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,6 +19,7 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^11.0.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "uuid": "^11.0.5"
