--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,22 +13,28 @@
     "@types/react-calendar": "^3.9.0",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "mobx": "^6.13.6",
     "mobx-react-lite": "^4.1.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^11.0.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.5",
     "@types/uuid": "^10.0.0",
+    "@types/yup": "^0.29.14",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
